--- a/complexAPIOne/index.html
+++ b/complexAPIOne/index.html
@@ -1,30 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-    	<meta charset="utf-8">
-    	<meta name="description" content="This is where your description goes">
-    	<meta name="keywords" content="one, two, three">
 
-		<title>Title in the tab</title>
+<head>
+	<meta charset="utf-8">
+	<meta name="description" content="Celebrity Nationality Finder">
+	<meta name="keywords" content="one, two, three">
 
-		<!-- external CSS link -->
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/style.css">
-	</head>
-	<body>
-		<section class="introSection">
-			<h1>Celebrity Nationality Finder</h1>
-			<p>Type in the name of a celebrity and find out their Nationality</p>
-			<input type="text" id="nameIpt">
-			<input type="button" value="Facts" id="factBtn">
-		</section>
-		<section class="displaySection">
-			<h2 id="nameDisplay"></h2>
-			<ul id="imgSection"></ul>
-			<img src="" id="flagSection" alt="">
-		</section>
-		
+	<title>Where They From?</title>
 
-		<script type="text/javascript" src="js/main.js"></script>
-	</body>
+	<!-- external CSS link -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+	<section class="introSection">
+		<h1>Where They From?</h1>
+		<p>Enter the name of a celebrity and find out their Nationality!</p>
+		<input type="text" id="nameIpt" placeholder="Enter First & Last Name">
+		<input type="button" value="Find" id="factBtn">
+	</section>
+	<section class="displaySection">
+		<h2 id="nameDisplay"></h2>
+		<ul id="imgSection"></ul>
+		<img src="" id="flagSection" alt="">
+		<p id="flagName"></p>
+	</section>
+
+
+	<script type="text/javascript" src="js/main.js"></script>
+</body>
+
 </html>
